feat: P4ADEV-2785-modify-create-notification-request (#69)