@@ -1,22 +1,20 @@
 package it.gov.pagopa.pu.send.mapper;
 
+import static it.gov.pagopa.pu.send.util.faker.DocumentFaker.buildDocumentDTO;
+import static it.gov.pagopa.pu.send.util.faker.PuPaymentFaker.buildPuPayment;
+import static it.gov.pagopa.pu.send.util.faker.PuRecipientFaker.buildPuRecipient;
+import static it.gov.pagopa.pu.send.util.faker.SendNotificationFaker.buildSendNotification;
 import static org.junit.jupiter.api.Assertions.*;
 
 import it.gov.pagopa.pu.send.citizen.service.DataCipherService;
 import it.gov.pagopa.pu.send.citizen.service.PersonalDataService;
-import it.gov.pagopa.pu.send.dto.DocumentDTO;
-import it.gov.pagopa.pu.send.dto.PuPayment;
-import it.gov.pagopa.pu.send.dto.SendNotification;
-import it.gov.pagopa.pu.send.dto.SendNotificationPIIDTO;
-import it.gov.pagopa.pu.send.dto.generated.Address;
-import it.gov.pagopa.pu.send.dto.generated.Attachment;
-import it.gov.pagopa.pu.send.dto.generated.PagoPa;
-import it.gov.pagopa.pu.send.dto.generated.Payment;
+import it.gov.pagopa.pu.send.dto.*;
 import it.gov.pagopa.pu.send.enums.NotificationStatus;
 import it.gov.pagopa.pu.send.model.SendNotificationNoPII;
 import it.gov.pagopa.pu.send.util.TestUtils;
 import java.time.OffsetDateTime;
-import java.util.Collections;
+import java.util.List;
+
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -48,13 +46,8 @@ class SendNotificationPIIMapperTest {
     SendNotificationNoPII noPii = getNoPII(personalDataId);
 
     SendNotificationPIIDTO piiDto = new SendNotificationPIIDTO();
-    piiDto.setFiscalCode("RSSMRA80L05F593A");
-    Address address = new Address();
-    address.setAddress("Via Larga 10");
-    address.setZip("00186");
-    address.setMunicipality("Roma");
-    address.setProvince("RM");
-    piiDto.setAddress(address);
+    List<PuRecipient> puRecipients = List.of(buildPuRecipient());
+    piiDto.setPuRecipients(puRecipients);
 
     Mockito.when(personalDataService.get(personalDataId, SendNotificationPIIDTO.class)).thenReturn(piiDto);
 
@@ -67,11 +60,7 @@ class SendNotificationPIIMapperTest {
     assertEquals(noPii.getSendNotificationId(), result.getSendNotificationId());
     assertEquals(noPii.getOrganizationId(), result.getOrganizationId());
     assertEquals(noPii.getPaProtocolNumber(), result.getPaProtocolNumber());
-    assertEquals(noPii.getSubjectType(), result.getSubjectType());
-    assertEquals(piiDto.getFiscalCode(), result.getFiscalCode());
-    assertEquals(piiDto.getAddress(), result.getAddress());
-    assertEquals(noPii.getDenomination(), result.getDenomination());
-    assertEquals(noPii.getPayments(), result.getPayments());
+    assertEquals(piiDto.getPuRecipients(), result.getPuRecipients());
     assertEquals(noPii.getDocuments(), result.getDocuments());
     assertEquals(noPii.getStatus(), result.getStatus());
     assertEquals(noPii.getNotificationRequestId(), result.getNotificationRequestId());
@@ -93,14 +82,20 @@ class SendNotificationPIIMapperTest {
   @Test
   void givenFullDTOWhenExtractNoPiiEntityThenVerify() {
     SendNotification sendNotification = getFullDTO();
-    Mockito.when(dataCipherService.hash(Mockito.any(String.class)))
-      .thenReturn(sendNotification.getNoPII().getFiscalCodeHash());
+    byte[] expectedHash = "BNRMHL75C06G702B".getBytes();
+
+    Mockito.when(dataCipherService.hash(Mockito.anyString()))
+      .thenReturn(expectedHash);
 
     SendNotificationNoPII result = sendNotificationPIIMapper.extractNoPiiEntity(sendNotification);
 
     TestUtils.checkNotNullFields(result, "personalDataId");
     assertNotNull(result);
+    assertEquals(sendNotification.getSendNotificationId(), result.getSendNotificationId());
+    assertEquals(expectedHash, result.getRecipients().getFirst().getFiscalCodeHash());
+    assertEquals(sendNotification.getPuRecipients().getFirst().getPuPayments(), result.getRecipients().getFirst().getPuPayments());
   }
+
 
   @Test
   void givenFullDTOWhenExtractPiiEntityThenVerify() {
@@ -110,51 +105,20 @@ class SendNotificationPIIMapperTest {
 
     TestUtils.checkNotNullFields(result);
     assertNotNull(result);
-    Assertions.assertEquals(sendNotification.getFiscalCode(), result.getFiscalCode());
-    Assertions.assertEquals(sendNotification.getAddress(), result.getAddress());
+    Assertions.assertEquals(sendNotification.getPuRecipients(), result.getPuRecipients());
   }
-
-
   private static SendNotificationNoPII getNoPII(Long personalDataId) {
     SendNotificationNoPII noPii = new SendNotificationNoPII();
     noPii.setSendNotificationId("SNID001");
     noPii.setOrganizationId(2L);
     noPii.setPaProtocolNumber("PP001");
-    noPii.setSubjectType("Individual");
     noPii.setPersonalDataId(personalDataId);
-    noPii.setDenomination("Test Denomination");
-    noPii.setFiscalCodeHash("RSSMRA80L05F593A".getBytes());
 
-    Payment payment = new Payment();
-    PagoPa pagoPa = new PagoPa();
-    pagoPa.setCreditorTaxId("CREDITORTAXID");
-    pagoPa.setNoticeCode("NOTICECODE");
-    pagoPa.setApplyCost(true);
+    PuRecipientNoPIIDTO recipient = new PuRecipientNoPIIDTO("HASHED_TAX_ID".getBytes(), List.of(buildPuPayment()));
+    noPii.setRecipients(List.of(recipient));
 
-    Attachment attachment = new Attachment();
-    attachment.setContentType("application/pdf");
-    attachment.setDigest("sha256");
-    attachment.setFileName("attachment");
-    pagoPa.setAttachment(attachment);
-    payment.setPagoPa(pagoPa);
-
-    PuPayment puPayment = new PuPayment();
-    puPayment.setDebtPositionId(0L);
-    puPayment.setPayment(payment);
-
-
-    noPii.setPayments(Collections.singletonList(puPayment));
-
-    DocumentDTO documentAttachment = new DocumentDTO();
-    documentAttachment.setFileName(attachment.getFileName());
-    documentAttachment.setDigest(attachment.getDigest());
-    documentAttachment.setContentType(attachment.getContentType());
-    documentAttachment.setKey("docKey");
-    documentAttachment.setVersionId("12345678");
-    noPii.setDocuments(Collections.singletonList(documentAttachment));
-
+    noPii.setDocuments(List.of(buildDocumentDTO()));
     noPii.setStatus(NotificationStatus.WAITING_FILE);
-
     noPii.setNotificationRequestId("REQ001");
     noPii.setIun("IUN123");
     noPii.setNotificationFeePolicy("Policy001");
@@ -172,64 +136,7 @@ class SendNotificationPIIMapperTest {
   }
 
   private static SendNotification getFullDTO() {
-    SendNotification sendNotification = new SendNotification();
-    sendNotification.setSendNotificationId("SNID001");
-    sendNotification.setOrganizationId(2L);
-    sendNotification.setPaProtocolNumber("PP001");
-    sendNotification.setSubjectType("Individual");
-    sendNotification.setDenomination("Test Denomination");
-
-    sendNotification.setFiscalCode("RSSMRA80L05F593A");
-    Address address = new Address();
-    address.setAddress("Via Larga 10");
-    address.setZip("00186");
-    address.setMunicipality("Roma");
-    address.setProvince("RM");
-    sendNotification.setAddress(address);
-
-    Payment payment = new Payment();
-    PagoPa pagoPa = new PagoPa();
-    pagoPa.setCreditorTaxId("CREDITORTAXID");
-    pagoPa.setNoticeCode("NOTICECODE");
-    pagoPa.setApplyCost(true);
-
-    Attachment attachment = new Attachment();
-    attachment.setContentType("application/pdf");
-    attachment.setDigest("sha256");
-    attachment.setFileName("attachment");
-    pagoPa.setAttachment(attachment);
-    payment.setPagoPa(pagoPa);
-
-    PuPayment puPayment = new PuPayment();
-    puPayment.setDebtPositionId(0L);
-    puPayment.setPayment(payment);
-
-
-    sendNotification.setPayments(Collections.singletonList(puPayment));
-
-    DocumentDTO documentAttachment = new DocumentDTO();
-    documentAttachment.setFileName(attachment.getFileName());
-    documentAttachment.setDigest(attachment.getDigest());
-    documentAttachment.setContentType(attachment.getContentType());
-    documentAttachment.setKey("docKey");
-    documentAttachment.setVersionId("12345678");
-    sendNotification.setDocuments(Collections.singletonList(documentAttachment));
-
-    sendNotification.setStatus(NotificationStatus.WAITING_FILE);
-
-    sendNotification.setNotificationRequestId("REQ001");
-    sendNotification.setIun("IUN123");
-    sendNotification.setNotificationFeePolicy("Policy001");
-    sendNotification.setPhysicalCommunicationType("Digital");
-    sendNotification.setSenderDenomination("Sender Org");
-    sendNotification.setSenderTaxId("TAX001");
-    sendNotification.setAmount(100);
-    sendNotification.setPaymentExpirationDate("2026-01-01");
-    sendNotification.setTaxonomyCode("CODE001");
-    sendNotification.setPaFee(0);
-    sendNotification.setVat(22);
-    sendNotification.setPagoPaIntMode("PA");
-    sendNotification.setNotificationDate(now);
+    SendNotification sendNotification = buildSendNotification();
     sendNotification.setNoPII(getNoPII(1L));
     return sendNotification;
   }
